--- a/notas/geometry.tex
+++ b/notas/geometry.tex
@@ -6,6 +6,13 @@
 
 \chapter{Sheaf theory}
 
+\subsection{Sheaves}
+
+\subsection{Cěch complexes}
+%verificar definicion en nlab, para generar la secuencia spectral de Leray
+
+
+
 \chapter{Algebraic geometry}
 
 % \chapter{Toric varieties}
