--- a/notas/algebra2.tex
+++ b/notas/algebra2.tex
@@ -228,7 +228,16 @@ $$
 If R is commutative this is an isomorphism of left R -modules.
 \end{theo}
 
+\begin{theo}[Existence of determinant]
+Let $(R, \mathcal{M})$ be a (possibly non-commutative) local ring. There is a well-defined determinant homomorphism $\det: GL(R) \rightarrow \overline{R}^*$, where $\bar{R}^*=\left(R^*\right)^{a b}$, satisfying:
 
+\begin{enumerate}
+    \item $\operatorname{det}(A B)=\operatorname{det} A \cdot \operatorname{det} B$
+    \item $\operatorname{det} A=1$ for all $A \in E(R)$
+    \item the composite $R^*=G L_1(R) \longrightarrow G L(R) \xrightarrow{\text { det }} \bar{R}^*$ is the natural quotient map.
+\end{enumerate}
+
+\end{theo}
 
 
 
