--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -1,3 +1,103 @@
+@book{weibelIntroductionHomologicalAlgebra1994,
+  title = {An {{Introduction}} to {{Homological Algebra}}},
+  author = {Weibel, Charles A.},
+  date = {1994-04-29},
+  edition = {1},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/CBO9781139644136},
+  abstract = {The landscape of homological algebra has evolved over the last half-century into a fundamental tool for the working mathematician. This book provides a unified account of homological algebra as it exists today. The historical connection with topology, regular local rings, and semi-simple Lie algebras are also described. This book is suitable for second or third year graduate students. The first half of the book takes as its subject the canonical topics in homological algebra: derived functors, Tor and Ext, projective dimensions and spectral sequences. Homology of group and Lie algebras illustrate these topics.  Intermingled are less canonical topics, such as the derived inverse limit functor lim1, local cohomology, Galois cohomology, and affine Lie algebras. The last part of the book covers less traditional topics that are a vital part of the modern homological toolkit: simplicial methods, Hochschild and cyclic homology, derived categories and total derived functors. By making these tools more accessible, the book helps to break down the technological barrier between experts and casual users of homological algebra.},
+  isbn = {978-0-521-43500-0 978-0-521-55987-4 978-1-139-64413-6},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
+}
+
+@book{hungerfordAlgebra1980,
+  title = {Algebra},
+  author = {Hungerford, Thomas W.},
+  date = {1980},
+  series = {Graduate {{Texts}} in {{Mathematics}}},
+  volume = {73},
+  publisher = {Springer},
+  location = {New York, NY},
+  doi = {10.1007/978-1-4612-6101-8},
+  isbn = {978-1-4612-6103-2 978-1-4612-6101-8},
+  keywords = {Adjoint functor,algebra,Coproduct,field,finite group,Galois theory,homomorphism,linear algebra,matrices,semigroup,transformation},
+  file = {/Users/abrahamrojasvega/Zotero/storage/VADZBH7A/Hungerford - 1980 - Algebra.pdf}
+}
+
+@incollection{suslinStabilityAlgebraicKtheory1982,
+  title = {Stability in Algebraic {{K-theory}}},
+  booktitle = {Algebraic {{K-Theory}}},
+  author = {Suslin, A. A.},
+  editor = {Dennis, R. Keith},
+  date = {1982},
+  volume = {966},
+  pages = {304--333},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/BFb0062181},
+  isbn = {978-3-540-11965-4 978-3-540-39553-9},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/ACEER5D3/Suslin - 1982 - Stability in algebraic K-theory.pdf}
+}
+
+@article{volodinALGEBRAICTHEORYEXTRAORDINARY1971,
+  title = {{{ALGEBRAIC}} {{{\emph{K}}}} -{{THEORY AS EXTRAORDINARY HOMOLOGY THEORY ON THE CATEGORY OF ASSOCIATIVE RINGS WITH UNITY}}},
+  author = {Volodin, I A},
+  date = {1971-08-31},
+  journaltitle = {Math. USSR Izv.},
+  volume = {5},
+  number = {4},
+  pages = {859--887},
+  issn = {0025-5726},
+  doi = {10.1070/IM1971v005n04ABEH001121},
+  abstract = {Algebraic K-theory can be constructed by means of the homotopy groups of the abstract simplicial structure on the group of invertible matrices GL(A) of the ring A. This structure may be naturally taken as two-sidedly invariant. Of basic interest is the multiplication in the functor so obtained, which for different rings A assumes different aspects.},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/57Z7A867/Volodin - 1971 - ALGEBRAIC K -THEORY AS EXTRAORDINARY HOMOLO.pdf}
+}
+
+@book{weibelKbookIntroductionAlgebraic2013a,
+  title = {The {{K-book}}: An Introduction to Algebraic {{K-theory}}},
+  shorttitle = {The {{K-book}}},
+  author = {Weibel, Charles A.},
+  date = {2013},
+  series = {Graduate Studies in Mathematics},
+  number = {volume 145},
+  publisher = {American Mathematical Society},
+  location = {Providence, Rhode Island},
+  isbn = {978-0-8218-9132-2},
+  langid = {english},
+  pagetotal = {618},
+  keywords = {$K$-theory -- General reference works (handbooks dictionaries bibliographies etc.),$K$-theory -- Instructional exposition (textbooks tutorial papers etc.),K-theory},
+  file = {/Users/abrahamrojasvega/Zotero/storage/46JUZRAP/Weibel - 2013 - The K-book an introduction to algebraic K-theory.pdf}
+}
+
+@article{vasershteinFOUNDATIONSALGEBRAICTHEORY1976,
+  title = {{{FOUNDATIONS OF ALGEBRAIC}} {{{\emph{K}}}} -{{THEORY}}},
+  author = {Vasershtein, L N},
+  date = {1976-08-31},
+  journaltitle = {Russ. Math. Surv.},
+  volume = {31},
+  number = {4},
+  pages = {89--156},
+  issn = {0036-0279, 1468-4829},
+  doi = {10.1070/RM1976v031n04ABEH001560},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/2YK2R6FJ/Vasershtein - 1976 - FOUNDATIONS OF ALGEBRAIC K -THEORY.pdf}
+}
+
+@book{goerssSimplicialHomotopyTheory2009,
+  title = {Simplicial {{Homotopy Theory}}},
+  author = {Goerss, Paul G. and Jardine, John F.},
+  date = {2009},
+  publisher = {Birkhäuser Basel},
+  location = {Basel},
+  doi = {10.1007/978-3-0346-0189-4},
+  isbn = {978-3-0346-0188-7 978-3-0346-0189-4},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/WDRQYMWS/Goerss y Jardine - 2009 - Simplicial Homotopy Theory.pdf}
+}
+
 @misc{adamekAbstractConcreteCategories,
   title = {Abstract and {{Concrete Categories}} - {{The Joy}} of {{Cats}}},
   author = {Adámek, Jirí and Herrlich, Horst and Strecker, George E.},
@@ -22,39 +122,16 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/DHABUM9I/Brown - 1982 - Cohomology of Groups.pdf}
 }
 
-@book{goerssSimplicialHomotopyTheory2009,
-  title = {Simplicial {{Homotopy Theory}}},
-  author = {Goerss, Paul G. and Jardine, John F.},
-  date = {2009},
-  publisher = {Birkhäuser Basel},
-  location = {Basel},
-  doi = {10.1007/978-3-0346-0189-4},
-  isbn = {978-3-0346-0188-7 978-3-0346-0189-4},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/WDRQYMWS/Goerss y Jardine - 2009 - Simplicial Homotopy Theory.pdf}
-}
-
-@misc{hatcherAlgebraicTopology2021,
-  title = {Algebraic {{Topology}}},
-  author = {Hatcher, Allen},
-  date = {2021},
-  url = {https://pi.math.cornell.edu/~hatcher/AT/AT.pdf},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/W9KE4PQ6/Hatcher.pdf}
-}
-
-@book{hungerfordAlgebra1980,
-  title = {Algebra},
-  author = {Hungerford, Thomas W.},
-  date = {1980},
-  series = {Graduate {{Texts}} in {{Mathematics}}},
-  volume = {73},
-  publisher = {Springer},
-  location = {New York, NY},
-  doi = {10.1007/978-1-4612-6101-8},
-  isbn = {978-1-4612-6103-2 978-1-4612-6101-8},
-  keywords = {Adjoint functor,algebra,Coproduct,field,finite group,Galois theory,homomorphism,linear algebra,matrices,semigroup,transformation},
-  file = {/Users/abrahamrojasvega/Zotero/storage/VADZBH7A/Hungerford - 1980 - Algebra.pdf}
+@book{maySimplicialObjectsAlgebraic1967a,
+  title = {Simplicial Objects in Algebraic Topology},
+  author = {May, Jon Peter},
+  date = {1967},
+  series = {Midway Reprint},
+  publisher = {Univ. of Chicago Press},
+  location = {Chicago},
+  isbn = {978-0-226-51180-1},
+  pagetotal = {161},
+  file = {/Users/abrahamrojasvega/Zotero/storage/9AMW2G9Y/May - 1967 - Simplicial objects in algebraic topology.pdf}
 }
 
 @misc{kupersHomologicalStabilityMinicourse2021,
@@ -67,16 +144,28 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/Z8SYHVQH/homstab.pdf}
 }
 
-@book{maySimplicialObjectsAlgebraic1967a,
-  title = {Simplicial Objects in Algebraic Topology},
-  author = {May, Jon Peter},
-  date = {1967},
-  series = {Midway Reprint},
-  publisher = {Univ. of Chicago Press},
-  location = {Chicago},
-  isbn = {978-0-226-51180-1},
-  pagetotal = {161},
-  file = {/Users/abrahamrojasvega/Zotero/storage/9AMW2G9Y/May - 1967 - Simplicial objects in algebraic topology.pdf}
+@misc{hatcherAlgebraicTopology2021,
+  title = {Algebraic {{Topology}}},
+  author = {Hatcher, Allen},
+  date = {2021},
+  url = {https://pi.math.cornell.edu/~hatcher/AT/AT.pdf},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/W9KE4PQ6/Hatcher.pdf}
+}
+
+@online{wahlHomologicalStabilityTool2022,
+  title = {Homological Stability: A Tool for Computations},
+  shorttitle = {Homological Stability},
+  author = {Wahl, Nathalie},
+  date = {2022-03-15},
+  eprint = {2203.07767},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2203.07767},
+  abstract = {Homological stability has shown itself to be a powerful tool for the computation of homology of families of groups such as general linear groups, mapping class groups or automorphisms of free groups. We survey here tools and techniques for proving homological stability theorems and for computing the stable homology, and illustrate the method through the computation of the homology of Higman-Thompson groups.},
+  pubstate = {prepublished},
+  keywords = {Mathematics - Algebraic Topology,Mathematics - Geometric Topology},
+  file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
 }
 
 @book{richterCategoriesHomotopyTheory2020,
@@ -103,64 +192,4 @@
   isbn = {978-0-8176-4736-0 978-0-8176-4739-1},
   langid = {english},
   file = {/Users/abrahamrojasvega/Zotero/storage/DMVGHGPT/Srinivas - 1996 - Algebraic K-Theory.pdf}
-}
-
-@incollection{suslinStabilityAlgebraicKtheory1982,
-  title = {Stability in Algebraic {{K-theory}}},
-  booktitle = {Algebraic {{K-Theory}}},
-  author = {Suslin, A. A.},
-  editor = {Dennis, R. Keith},
-  date = {1982},
-  volume = {966},
-  pages = {304--333},
-  publisher = {Springer Berlin Heidelberg},
-  location = {Berlin, Heidelberg},
-  doi = {10.1007/BFb0062181},
-  isbn = {978-3-540-11965-4 978-3-540-39553-9},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/ACEER5D3/Suslin - 1982 - Stability in algebraic K-theory.pdf}
-}
-
-@online{wahlHomologicalStabilityTool2022,
-  title = {Homological Stability: A Tool for Computations},
-  shorttitle = {Homological Stability},
-  author = {Wahl, Nathalie},
-  date = {2022-03-15},
-  eprint = {2203.07767},
-  eprinttype = {arXiv},
-  eprintclass = {math},
-  doi = {10.48550/arXiv.2203.07767},
-  abstract = {Homological stability has shown itself to be a powerful tool for the computation of homology of families of groups such as general linear groups, mapping class groups or automorphisms of free groups. We survey here tools and techniques for proving homological stability theorems and for computing the stable homology, and illustrate the method through the computation of the homology of Higman-Thompson groups.},
-  pubstate = {prepublished},
-  keywords = {Mathematics - Algebraic Topology,Mathematics - Geometric Topology},
-  file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
-}
-
-@book{weibelIntroductionHomologicalAlgebra1994,
-  title = {An {{Introduction}} to {{Homological Algebra}}},
-  author = {Weibel, Charles A.},
-  date = {1994-04-29},
-  edition = {1},
-  publisher = {Cambridge University Press},
-  doi = {10.1017/CBO9781139644136},
-  abstract = {The landscape of homological algebra has evolved over the last half-century into a fundamental tool for the working mathematician. This book provides a unified account of homological algebra as it exists today. The historical connection with topology, regular local rings, and semi-simple Lie algebras are also described. This book is suitable for second or third year graduate students. The first half of the book takes as its subject the canonical topics in homological algebra: derived functors, Tor and Ext, projective dimensions and spectral sequences. Homology of group and Lie algebras illustrate these topics.  Intermingled are less canonical topics, such as the derived inverse limit functor lim1, local cohomology, Galois cohomology, and affine Lie algebras. The last part of the book covers less traditional topics that are a vital part of the modern homological toolkit: simplicial methods, Hochschild and cyclic homology, derived categories and total derived functors. By making these tools more accessible, the book helps to break down the technological barrier between experts and casual users of homological algebra.},
-  isbn = {978-0-521-43500-0 978-0-521-55987-4 978-1-139-64413-6},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
-}
-
-@book{weibelKbookIntroductionAlgebraic2013a,
-  title = {The {{K-book}}: An Introduction to Algebraic {{K-theory}}},
-  shorttitle = {The {{K-book}}},
-  author = {Weibel, Charles A.},
-  date = {2013},
-  series = {Graduate Studies in Mathematics},
-  number = {volume 145},
-  publisher = {American Mathematical Society},
-  location = {Providence, Rhode Island},
-  isbn = {978-0-8218-9132-2},
-  langid = {english},
-  pagetotal = {618},
-  keywords = {$K$-theory -- General reference works (handbooks dictionaries bibliographies etc.),$K$-theory -- Instructional exposition (textbooks tutorial papers etc.),K-theory},
-  file = {/Users/abrahamrojasvega/Zotero/storage/46JUZRAP/Weibel - 2013 - The K-book an introduction to algebraic K-theory.pdf}
 }
