--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -193,3 +193,17 @@
   langid = {english},
   file = {/Users/abrahamrojasvega/Zotero/storage/DMVGHGPT/Srinivas - 1996 - Algebraic K-Theory.pdf}
 }
+
+@thesis{maazenHomologyStabilityGeneral1979a,
+  type = {phdthesis},
+  title = {Homology Stability for the General Linear Group},
+  author = {Maazen, Hendrik},
+  date = {1979-06-01},
+  institution = {Utrecht University},
+  url = {https://dspace.library.uu.nl/handle/1874/237657},
+  urldate = {2024-08-16},
+  abstract = {This thesis studies the homology stability problem for general linear groups over Euclidean rings and over subrings of the field of rational numbers. Affine linear groups, acting on affine space rather than linear space, are also considered. In order to get stability results one establishes that certain posets of ordered unimodular sequences of vectors are Cohen-Macaulay. The ideas are first illustrated by reproving the Nakaoka stability theorem on homology stability for symmetric groups.},
+  langid = {english},
+  annotation = {Accepted: 2012-04-18T07:56:31Z},
+  file = {/Users/abrahamrojasvega/Zotero/storage/945WVQDI/maazen.pdf}
+}
