--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -121,4 +121,7 @@ In many situations, the space $V(G)$ is not convenient from a technical point of
 
 
 
+
+\printbibliography % Add this line to print the bibliography section
+
 \end{document}
