despues del pull request

--- a/notas/stability.tex
+++ b/notas/stability.tex
@@ -178,7 +178,7 @@ is surjective if $* \leq \frac{n}{2}$ and an isomorphism if $* \leq \frac{n-1}{2
 
 
 
-\chapter*{Stability in algebraic K-theory}
+\chapter{Stability in algebraic K-theory}
 
 % includes proofs!!!
 
@@ -219,4 +219,38 @@ Suppose that $G$ is a group, $H$ a perfect normal subgroup and $B G \rightarrow 
     These properties characterize $Y$ up to homotopy equivalence.
 \end{lemm}
 
+\section{Aciclicity Theorem II}
 
+\begin{theo}
+Suppose that $j_j, \ldots, j_r$ are distinct indices. Then the space $Z\left(T ; T^j 1, \ldots, T^j r\right)$ (see $\left.\S 2\right)$ is $\left[\frac{r-3}{2}\right]$-acyc 1 ic.    
+\end{theo}
+
+\begin{theo}
+$\tilde{H}_p\left(x_n(R)\right)=0$ for $n \geq 2 p+1$    
+\end{theo}
+
+\begin{coro}
+    $H_p\left(X_{2 p+1}(R)\right)=H_p\left(X_{2 p+2}(R)\right)=\ldots=H_p\left(X_{\infty}(R)\right)$.
+\end{coro}
+
+\begin{coro}
+The canonical homomorphism $H_p\left(X_{2 p+1}(R)\right) \rightarrow H_p\left(X_{\infty}(R)\right)$ equals zero.    
+\end{coro}
+
+\section{Stability in Quillen's K-theory}
+
+\begin{theo}
+If $n \geq 2 i+1$, then there exists a canonical homomorphism
+    $k_{i, n}(R)+k_{i, n}^Q$. This homomorphism is surjective for
+    $n \geq \max (2 i+1$, s.r. $R+i-1)$ and bijective for $n \geq \max (2 i+1$, s.r. $R+i)$.    
+\end{theo}
+
+\begin{theo}
+The canonical homomorphism $k_{i, n}^Q(R) \rightarrow k_{i, n+1}^Q(R)$ is surjective for $n \geq \max (2 i, s . r . R+i-1)$ and bijective for $n \geq \max (2 i+1$, s.r. $R+i)$.
+\end{theo}
+
+\begin{coro}
+The canonical homomorphism $\mathrm{H}_i\left(\mathrm{GL}_n(R)\right) \rightarrow\left(\mathrm{H}_i\left(\mathrm{GL}_{n+1}(R)\right)\right.$ is surjective for $n \geq \max (2 i, s . r . R+i-1)$ and bijective for $n \geq \max (2 i+1, s \cdot r . R+i)$
+\end{coro}
+
+It seems reasonable in view of [20], [12], [21] to suppose that for essentially commutative rings (i.e., rings that are finitely generated as a module over their center) the group $S t_n(R)$ acts trivially on $K_{i, n}(R)$ for $n \geq i+2$ and hence $k_{i, n}(R)=k_{i, n}^Q(R)$ for $n \geq 2 i+1$.
